Bootstrap Icon Type Optimization.